[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/SF1/ShiningForceMenuFont.tres" type="FontFile" id=1]
[ext_resource path="res://General/BattleActionsMenu/RedSelectionBorder/RedSelectionLongBorder.tscn" type="PackedScene" id=2]
[ext_resource path="res://General/OverworldMenus/MicroMemberListView/InventoryPreview.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/SF1/ShiningForceTextBackground.png" type="Texture2D" id=7]
[ext_resource path="res://Assets/SF1/PlayableCharacters/Hans/Unpromoted_Portraits.png" type="Texture2D" id=8]
[ext_resource path="res://Assets/SF1/ShiningForceMenuBorder.png" type="Texture2D" id=10]
[ext_resource path="res://General/OverworldMenus/MicroMemberListView/MicroMemberListView.gd" type="Script" id=11]

[node name="MicroMemberListViewNodeRoot" type="Node2D"]
script = ExtResource( 11 )

[node name="PortraitWrapperNode" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="PortraitSprite" type="Sprite2D" parent="PortraitWrapperNode"]
position = Vector2( 20.7908, 33.5002 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 8 )
hframes = 4
__meta__ = {
"_edit_lock_": true
}

[node name="PortraitNinePatchRect" type="NinePatchRect" parent="PortraitWrapperNode"]
offset_top = 6.0
offset_right = 55.0
offset_bottom = 77.0
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 10 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="InventoryPreviewRoot" parent="." instance=ExtResource( 3 )]
position = Vector2( 2, 59 )
scale = Vector2( 0.8, 0.8 )

[node name="StatNinePatchRect2" type="NinePatchRect" parent="."]
offset_left = 41.0
offset_top = 6.0
offset_right = 393.0
offset_bottom = 121.0
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 7 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="NameClassLevelWrapperNode" type="Node2D" parent="StatNinePatchRect2"]
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="NameStaticLabel" type="Label" parent="StatNinePatchRect2/NameClassLevelWrapperNode"]
offset_left = 33.0
offset_top = 9.0
offset_right = 65.0
offset_bottom = 17.0
custom_fonts/font = ExtResource( 1 )
text = "NAME"
valign = 1

[node name="ClassStaticLabel" type="Label" parent="StatNinePatchRect2/NameClassLevelWrapperNode"]
offset_left = 159.0
offset_top = 9.0
offset_right = 247.0
offset_bottom = 17.0
custom_fonts/font = ExtResource( 1 )
text = "CLASS"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelStaticLabel" type="Label" parent="StatNinePatchRect2/NameClassLevelWrapperNode"]
offset_left = 267.0
offset_top = 9.0
offset_right = 283.0
offset_bottom = 17.0
custom_fonts/font = ExtResource( 1 )
text = "LV"
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="StatNinePatchRect2"]
offset_left = 9.0
offset_top = 8.0
offset_right = 345.0
offset_bottom = 104.0

[node name="VBoxContainer" type="VBoxContainer" parent="StatNinePatchRect2/ScrollContainer"]
custom_constants/separation = 16
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Test_NOT-USED_CharacterWrapperNode" type="Control" parent="StatNinePatchRect2/ScrollContainer/VBoxContainer"]
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="ActiveForceStaticLabel" type="Label" parent="StatNinePatchRect2/ScrollContainer/VBoxContainer/Test_NOT-USED_CharacterWrapperNode"]
offset_left = 1.0
offset_top = 4.0
offset_right = 17.0
offset_bottom = 12.0
custom_colors/font_color = Color( 0.952941, 0.670588, 0.305882, 1 )
custom_fonts/font = ExtResource( 1 )
text = "FW"
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="NameStaticLabel" type="Label" parent="StatNinePatchRect2/ScrollContainer/VBoxContainer/Test_NOT-USED_CharacterWrapperNode"]
offset_left = 25.0
offset_top = 4.0
offset_right = 57.0
offset_bottom = 12.0
custom_fonts/font = ExtResource( 1 )
text = "NAME"
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="ClassStaticLabel" type="Label" parent="StatNinePatchRect2/ScrollContainer/VBoxContainer/Test_NOT-USED_CharacterWrapperNode"]
offset_left = 151.0
offset_top = 3.66663
offset_right = 239.0
offset_bottom = 11.6666
custom_fonts/font = ExtResource( 1 )
text = "CLASS"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelStaticLabel" type="Label" parent="StatNinePatchRect2/ScrollContainer/VBoxContainer/Test_NOT-USED_CharacterWrapperNode"]
offset_left = 233.0
offset_top = 4.0
offset_right = 274.0
offset_bottom = 12.0
custom_fonts/font = ExtResource( 1 )
text = "LV"
align = 2
valign = 1

[node name="StatNinePatchRect3" type="NinePatchRect" parent="."]
visible = false
offset_left = -1.0
offset_top = 59.0
offset_right = 55.0
offset_bottom = 87.0
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 7 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameStaticLabel" type="Label" parent="StatNinePatchRect3"]
visible = false
offset_left = 3.6667
offset_top = 10.3334
offset_right = 51.6667
offset_bottom = 18.3334
custom_fonts/font = ExtResource( 1 )
text = "SELECT"
valign = 1

[node name="RedSelectionBorderRoot" parent="." instance=ExtResource( 2 )]
position = Vector2( 63, 11 )
